# compiler-design-series

./: .gitignore  CMakeLists.txt  CompilePhase.h  Grammar.md  Grammar.txt  README.md  SourceFile.cpp  SourceFile.h  build.bat  build.sh  main.cpp  run.bat  run.sh  test.mathexpr
ast/: ASTNodes.h  ASTVisitor.cpp  ASTVisitor.h
lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
parser/: Parser.cpp  Parser.h
reader/: CodeLoc.cpp  Reader.cpp  Reader.h
src/: CMakeLists.txt  CompilerPass.h  SourceFile.cpp  SourceFile.h  main.cpp
src/ast/: ASTNodes.h
src/irgenerator/: IRGenerator.cpp  IRGenerator.h
src/iroptimizer/: IROptimizer.cpp  IROptimizer.h
src/lexer/: Lexer.cpp  Lexer.h
src/objectemitter/: ObjectEmitter.cpp  ObjectEmitter.h
src/parser/: Parser.cpp
src/reader/: CodeLoc.h  Reader.cpp  Reader.h
src/symboltable/: SymbolTable.cpp  SymbolTableBuilder.cpp  SymbolTableEntry.h  SymbolType.cpp  SymbolType.h
src/typechecker/: TypeChecker.cpp  TypeChecker.h
symboltable/: SymbolTable.h  SymbolTableBuilder.cpp  SymbolTableBuilder.h  SymbolTableEntry.cpp  SymbolTableEntry.h  SymbolType.cpp
